docs/pages/versions/v55.0.0/sdk/ui/jetpack-compose/dockedsearchbar.mdx
---
modificationDate: March 06, 2026
title: DockedSearchBar
description: A Jetpack Compose DockedSearchBar component for displaying an inline search input.
sourceCodeUrl: 'https://github.com/expo/expo/tree/main/packages/expo-ui'
packageName: '@expo/ui'
platforms: ['android']
---

import APISection from '~/components/plugins/APISection';
import { APIInstallSection } from '~/components/plugins/InstallSection';

Expo UI DockedSearchBar matches the official Jetpack Compose [SearchBar API](https://developer.android.com/develop/ui/compose/components/search-bar) and displays a search input that remains anchored in its parent layout rather than expanding to full screen.

## Installation

<APIInstallSection />

## Usage

### Basic docked search bar

```tsx BasicDockedSearchBarExample.tsx
import { useState } from 'react';
import { Host, DockedSearchBar } from '@expo/ui/jetpack-compose';

export default function BasicDockedSearchBarExample() {
  const [query, setQuery] = useState('');

  return (
    <Host matchContents>
      <DockedSearchBar onQueryChange={setQuery} />
    </Host>
  );
}
```

### With placeholder and leading icon

Use the `DockedSearchBar.Placeholder` and `DockedSearchBar.LeadingIcon` slot components to customize the search bar appearance.

```tsx DockedSearchBarWithSlotsExample.tsx
import { useState } from 'react';
import { Host, DockedSearchBar, Text } from '@expo/ui/jetpack-compose';

export default function DockedSearchBarWithSlotsExample() {
  const [query, setQuery] = useState('');

  return (
    <Host matchContents>
      <DockedSearchBar onQueryChange={setQuery}>
        <DockedSearchBar.Placeholder>
          <Text>Search items...</Text>
        </DockedSearchBar.Placeholder>
        <DockedSearchBar.LeadingIcon>
          <Text>🔍</Text>
        </DockedSearchBar.LeadingIcon>
      </DockedSearchBar>
    </Host>
  );
}
```

## API

```tsx
import { DockedSearchBar } from '@expo/ui/jetpack-compose';
```

<APISection packageName="expo-ui/jetpack-compose/dockedsearchbar" apiName="DockedSearchBar" />
